--- a/Comsci/Comsci.vcxproj
+++ b/Comsci/Comsci.vcxproj
@@ -149,12 +149,14 @@
     <ClInclude Include="..\..\..\..\..\Desktop\Cygwin\home\Reyn\FinalProject\ObjectCode.h" />
     <ClInclude Include="..\..\..\..\..\Desktop\Cygwin\home\Reyn\FinalProject\position.h" />
     <ClInclude Include="Comsci.h" />
+    <ClInclude Include="lodepng.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Comsci.cpp" />
+    <ClCompile Include="lodepng.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
