--- a/Comsci/Comsci.vcxproj
+++ b/Comsci/Comsci.vcxproj
@@ -147,13 +147,13 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\..\..\Desktop\Cygwin\home\Reyn\FinalProject\GameObject.h" />
     <ClInclude Include="..\..\..\..\..\Desktop\Cygwin\home\Reyn\FinalProject\ObjectCode.h" />
-    <ClInclude Include="..\..\..\..\..\Desktop\Cygwin\home\Reyn\FinalProject\position.h" />
     <ClInclude Include="Comsci.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="lodepng.h" />
     <ClInclude Include="ObjectCode.h" />
+    <ClInclude Include="Position.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
