Basic no-op stairs

--- a/Comsci/Comsci.vcxproj.filters
+++ b/Comsci/Comsci.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="AI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ActionCode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
