--- a/Comsci/Comsci.vcxproj
+++ b/Comsci/Comsci.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\..\..\Desktop\Cygwin\home\Reyn\FinalProject\GameObject.h" />
     <ClInclude Include="..\..\..\..\..\Desktop\Cygwin\home\Reyn\FinalProject\ObjectCode.h" />
+    <ClInclude Include="ActionCode.h" />
     <ClInclude Include="AI.h" />
     <ClInclude Include="Comsci.h" />
     <ClInclude Include="Game.h" />
