--- a/Comsci/Comsci.vcxproj.filters
+++ b/Comsci/Comsci.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="GameType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
