--- a/Comsci/Comsci.vcxproj
+++ b/Comsci/Comsci.vcxproj
@@ -99,14 +99,22 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_WINDOWS;INCR_SEGMENTS_AFTER_COUNT=0;TEXTURES_DIR="textures\\";NO_DEBUG_SPAWNER=1;NO_DEBUG_MOVE=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_WINDOWS;ASIO_STANDALONE=1;INCR_SEGMENTS_AFTER_COUNT=0;TEXTURES_DIR="textures\\";NO_DEBUG_SPAWNER=1;NO_DEBUG_MOVE=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <AdditionalIncludeDirectories>C:\Users\Michael\apcs2\Comsci\asio\asio-1.10.6\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PreBuildEvent>
+      <Command>"../tools/protoc" -I=./ --cpp_out=autogen network/comsci.proto
+</Command>
+    </PreBuildEvent>
+    <PreBuildEvent>
+      <Message>Builds the Protocol Buffer files from the description.</Message>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -132,9 +140,10 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>NDEBUG;_WINDOWS;INCR_SEGMENTS_AFTER_COUNT=0;TEXTURES_DIR="";%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_WINDOWS;ASIO_STANDALONE=1;INCR_SEGMENTS_AFTER_COUNT=0;TEXTURES_DIR="";%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>C:\Users\Michael\apcs2\Comsci\asio\asio-1.10.6\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -142,6 +151,13 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PreBuildEvent>
+      <Command>"../tools/protoc" -I=./ --cpp_out=autogen network/comsci.proto
+</Command>
+    </PreBuildEvent>
+    <PreBuildEvent>
+      <Message>Builds the Protocol Buffer files from the description.</Message>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -163,6 +179,7 @@
     <ClInclude Include="ObjectCode.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Server.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="texpath.h" />
