--- a/Comsci/Comsci.vcxproj.filters
+++ b/Comsci/Comsci.vcxproj.filters
@@ -114,5 +114,8 @@
     <Image Include="Comsci.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="textures\spritesheet.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
