--- a/Comsci/Comsci.vcxproj
+++ b/Comsci/Comsci.vcxproj
@@ -108,7 +108,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>libprotobuf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent />
     <PreBuildEvent />
@@ -148,7 +148,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>libprotobuf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent />
     <PreBuildEvent />
@@ -162,14 +162,12 @@
     <ClInclude Include="AI.h" />
     <ClInclude Include="Comsci.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="LocalGame.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameType.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="LevelGenerator.h" />
     <ClInclude Include="LevelType.h" />
     <ClInclude Include="lodepng.h" />
-    <ClInclude Include="network\RemoteGame.h" />
     <ClInclude Include="ObjectCode.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="Resource.h" />
@@ -181,7 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Comsci.cpp" />
-    <ClCompile Include="LocalGame.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="lodepng.cpp" />
